plot individual trajectories with odor boundaries and odor onset point

--- a/Nbs/stripgrid.ipynb
+++ b/Nbs/stripgrid.ipynb
@@ -62,7 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 415,
+   "id": "907b8c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'behavior' from '/Users/julianarhee/Repositories/plume-tracking/behavior.py'>"
+      ]
+     },
+     "execution_count": 415,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(butil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
    "id": "a286263c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 417,
    "id": "e5efca80",
    "metadata": {},
    "outputs": [
@@ -81,15 +102,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fig ID: stripgrid/20221102\n",
+      "Fig ID: stripgrid/20221101\n",
       "Saving figures to:\n",
-      "    /Users/julianarhee/Documents/rutalab/data/figures/stripgrid/20221102\n"
+      "    /Users/julianarhee/Documents/rutalab/data/figures/stripgrid/20221101\n"
      ]
     }
    ],
    "source": [
     "experiment = 'stripgrid'\n",
-    "session = '20221102'\n",
+    "session = '20221101'\n",
     "\n",
     "# create fig ID\n",
     "fig_id = os.path.join(rootdir.split(rootdir)[1], experiment, session)\n",
@@ -106,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 418,
    "id": "ddc7bde2",
    "metadata": {
     "scrolled": true
@@ -116,15 +137,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 tracking files.\n",
-      "0 11022022-120821_hdc-sytGCaMP7f_fly1_stripgrid.log\n",
-      "1 11022022-132054_hdc-sytGCaMP7f_fly1_stripgrid_2p.log\n",
-      "2 11022022-134346_hdc-sytGCaMP7f_fly1_stripgrid_2p.log\n",
-      "3 11022022-145112_hdc-sytGCaMP7f_fly2_stripgrid.log\n",
-      "4 11022022-170814_hdc-sytGCaMP7f_fly3_stripgrid_test.log\n",
-      "5 11022022-174454_hdc-sytGCaMP7f_fly3_stripgrid_2p.log\n",
-      "6 11022022-180758_hdc-sytGCaMP7f_fly3_stripgrid_2p.log\n",
-      "7 11022022-184822_hdc-sytGCaMP7f_fly4_stripgrid_2p.log\n"
+      "Found 7 tracking files.\n",
+      "0 11012022-125512_hDC-sytGCaMP7f_fly1_stripgrid_test.log\n",
+      "1 11012022-131904_hDC-sytGCaMP7f_fly2_stripgrid_test.log\n",
+      "2 11012022-134145_hdc-sytGCaMP7f_fly3_stripgrid_test.log\n",
+      "3 11012022-141532_hdc-sytGCaMP7f_fly4_stripgrid_test.log\n",
+      "4 11012022-160300_hdc-sytGCaMP7f_fly1_stripgrid_2p.log\n",
+      "5 11012022-170843_hdc-sytGCaMP7f_fly3_stripgrid_test.log\n",
+      "6 11012022-171227_hdc-sytGCaMP7f_fly3_stripgrid_test.log\n"
      ]
     }
    ],
@@ -139,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 419,
    "id": "53c8eef8",
    "metadata": {},
    "outputs": [
@@ -149,7 +169,7 @@
        "<module 'behavior' from '/Users/julianarhee/Repositories/plume-tracking/behavior.py'>"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 420,
    "id": "be8cc016",
    "metadata": {
     "scrolled": true
@@ -170,14 +190,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11022022-120821 fly1 hdc-sytgcamp7f\n",
-      "11022022-132054 fly1 hdc-sytgcamp7f\n",
-      "11022022-134346 fly1 hdc-sytgcamp7f\n",
-      "11022022-145112 fly2 hdc-sytgcamp7f\n",
-      "11022022-170814 fly3 hdc-sytgcamp7f\n",
-      "11022022-174454 fly3 hdc-sytgcamp7f\n",
-      "11022022-180758 fly3 hdc-sytgcamp7f\n",
-      "11022022-184822 fly4 hdc-sytgcamp7f\n"
+      "11012022-125512 fly1 hdc-sytgcamp7f\n",
+      "11012022-131904 fly2 hdc-sytgcamp7f\n",
+      "11012022-134145 fly3 hdc-sytgcamp7f\n",
+      "11012022-141532 fly4 hdc-sytgcamp7f\n",
+      "11012022-160300 fly1 hdc-sytgcamp7f\n",
+      "11012022-170843 fly3 hdc-sytgcamp7f\n",
+      "11012022-171227 fly3 hdc-sytgcamp7f\n"
      ]
     }
    ],
@@ -200,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 421,
    "id": "82be0089",
    "metadata": {},
    "outputs": [
@@ -208,14 +227,14 @@
      "data": {
       "text/plain": [
        "fly_id\n",
-       "20221102-fly1    3\n",
-       "20221102-fly2    1\n",
-       "20221102-fly3    3\n",
-       "20221102-fly4    1\n",
+       "20221101-fly1    2\n",
+       "20221101-fly2    1\n",
+       "20221101-fly3    3\n",
+       "20221101-fly4    1\n",
        "Name: trial, dtype: int64"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 422,
    "id": "8bd900d7",
    "metadata": {},
    "outputs": [
@@ -234,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['20221102-fly1', '20221102-fly2', '20221102-fly3', '20221102-fly4']\n"
+      "['20221101-fly1', '20221101-fly2', '20221101-fly3', '20221101-fly4']\n"
      ]
     }
    ],
@@ -253,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
-   "id": "658bf96f",
+   "execution_count": 423,
+   "id": "16b06313",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +282,7 @@
        "<module 'behavior' from '/Users/julianarhee/Repositories/plume-tracking/behavior.py'>"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 424,
    "id": "cc21a8f7",
    "metadata": {
     "scrolled": true
@@ -284,19 +303,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20221102-fly1 11022022-120821\n",
-      "20221102-fly1 11022022-132054\n",
-      "20221102-fly1 11022022-134346\n",
+      "20221101-fly1 11012022-125512\n",
+      "Crossings? True\n",
+      "20221101-fly1 11012022-160300\n",
+      "Crossings? False\n",
       "... Using default odor min/max, animal did not move in odor\n",
-      "20221102-fly2 11022022-145112\n",
-      "20221102-fly3 11022022-170814\n",
-      "... Using default odor min/max, animal did not move in odor\n",
-      "20221102-fly3 11022022-174454\n",
-      "... Using default odor min/max, animal did not move in odor\n",
-      "20221102-fly3 11022022-180758\n",
-      "... Using default odor min/max, animal did not move in odor\n",
-      "20221102-fly4 11022022-184822\n",
-      "... Using default odor min/max, animal did not move in odor\n"
+      "20221101-fly2 11012022-131904\n",
+      "Crossings? True\n",
+      "20221101-fly3 11012022-134145\n",
+      "Crossings? True\n",
+      "20221101-fly3 11012022-170843\n",
+      "Crossings? True\n",
+      "20221101-fly3 11012022-171227\n",
+      "Crossings? True\n",
+      "20221101-fly4 11012022-141532\n",
+      "Crossings? True\n"
      ]
     }
    ],
@@ -317,29 +338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
-   "id": "e93abf12",
+   "execution_count": 425,
+   "id": "982ac9be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'20221102-fly1_11022022-120821': [(109.69359833806537, 119.696583832493),\n",
-       "  (319.97662832436, 329.97662832436),\n",
-       "  (529.7039145108993, 540.0944519063199)],\n",
-       " '20221102-fly1_11022022-132054': [(-18.913961643501697, -8.8776515561944)],\n",
-       " '20221102-fly1_11022022-134346': [(-5.0357595375931155, 4.9642404624068845)],\n",
-       " '20221102-fly2_11022022-145112': [(167.85255148294598, 177.85255148294598),\n",
-       "  (377.8599209046, 387.8599209046),\n",
-       "  (587.90398049649, 597.90398049649),\n",
-       "  (798.09294336087, 808.09294336087)],\n",
-       " '20221102-fly3_11022022-170814': [(16.7021778495049, 26.7021778495049)],\n",
-       " '20221102-fly3_11022022-174454': [(-3.30315865592591, 6.69684134407409)],\n",
-       " '20221102-fly3_11022022-180758': [(-4.893990782967812, 5.106009217032188)],\n",
-       " '20221102-fly4_11022022-184822': [(-4.40696001207701, 5.59303998792299)]}"
+       "{'20221101-fly1_11012022-125512': [(123.47957887798898, 133.55064100395546)],\n",
+       " '20221101-fly1_11012022-160300': [(-5.3579585785162696, 4.6420414214837304)],\n",
+       " '20221101-fly2_11012022-131904': [(-6.27212819690034, 3.84138471046166)],\n",
+       " '20221101-fly3_11012022-134145': [(-56.288583400856, -46.26213482106749)],\n",
+       " '20221101-fly3_11012022-170843': [],\n",
+       " '20221101-fly3_11012022-171227': [],\n",
+       " '20221101-fly4_11012022-141532': [(39.51732903436199, 49.55220444772099)]}"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,6 +362,38 @@
    "source": [
     "odor_borders"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f208b955",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64058efa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbca53d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a46a7f91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -374,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "d10ce1dc",
+   "id": "7cbe71c6",
    "metadata": {},
    "outputs": [
     {
@@ -1426,8 +1473,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 412,
+   "id": "bb0e89c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-106.0877770931682"
+      ]
+     },
+     "execution_count": 412,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(ax.get_xlim())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "113f5908",
+   "id": "2b5b0dcb",
    "metadata": {},
    "outputs": [],
    "source": []
