--- a/Nbs/stripgrid.ipynb
+++ b/Nbs/stripgrid.ipynb
@@ -22,16 +22,8 @@
     "import seaborn as sns\n",
     "import pylab as pl\n",
     "\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "487474fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from datetime import datetime\n",
+    "\n",
     "# import some custom funcs\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
@@ -63,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "907b8c6d",
+   "id": "efcd695a",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "16b06313",
+   "id": "6c9815ea",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "982ac9be",
+   "id": "f81d688f",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f208b955",
+   "id": "1e6a3692",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -374,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64058efa",
+   "id": "446766e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbca53d",
+   "id": "6730692b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -390,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46a7f91",
+   "id": "ba8204ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -421,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "7cbe71c6",
+   "id": "d0a7e6ae",
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "bb0e89c1",
+   "id": "e91b835e",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b5b0dcb",
+   "id": "3a99fb0f",
    "metadata": {},
    "outputs": [],
    "source": []
