replacing odor_width with strip_width and grid_sep with strip_sep

--- a/tests/calculate-odor-boundary.ipynb
+++ b/tests/calculate-odor-boundary.ipynb
@@ -1598,11 +1598,11 @@
    ],
    "source": [
     "#odor_cond = 'hdc-sytgcamp7f'\n",
-    "odor_width=10\n",
-    "grid_sep=200\n",
+    "strip_width=10\n",
+    "strip_sep=200\n",
     "# get odor border for each fly\n",
     "ogrid = butil.get_odor_grid(df, \n",
-    "                            odor_width=odor_width, grid_sep=grid_sep,\n",
+    "                            strip_width=strip_width, strip_sep=strip_sep,\n",
     "                            use_crossings=True, verbose=False)\n",
     "ogrid"
    ]
@@ -1625,7 +1625,7 @@
     }
    ],
    "source": [
-    "odor_grid = butil.find_odor_grid(df, odor_width=odor_width, grid_sep=grid_sep)\n",
+    "odor_grid = butil.find_odor_grid(df, strip_width=strip_width, strip_sep=strip_sep)\n",
     "odor_grid"
    ]
   },
@@ -1692,7 +1692,7 @@
    "source": [
     "traveled_xmin, traveled_xmax = butil.get_boundary_from_crossings(df, \n",
     "                                curr_odor_xmin, curr_odor_xmax,\n",
-    "                                ix=curr_grid_ix, odor_width=odor_width, grid_sep=grid_sep, \n",
+    "                                ix=curr_grid_ix, strip_width=strip_width, strip_sep=strip_sep, \n",
     "                                use_mean=True)\n",
     "traveled_xmin, traveled_xmax\n"
    ]
@@ -1723,13 +1723,13 @@
    ],
    "source": [
     "# if crossings detected, find traveled max/min \n",
-    "odor_width=10\n",
-    "grid_sep=200\n",
+    "strip_width=10\n",
+    "strip_sep=200\n",
     "verbose=True\n",
     "if crossed_edge:\n",
     "    traveled_xmin, traveled_xmax = butil.get_boundary_from_crossings(df, \n",
     "                                    curr_odor_xmin, curr_odor_xmax,\n",
-    "                                    ix=curr_grid_ix, odor_width=odor_width, grid_sep=grid_sep, \n",
+    "                                    ix=curr_grid_ix, strip_width=strip_width, strip_sep=strip_sep, \n",
     "                                    use_mean=True)\n",
     "    if verbose:\n",
     "        print('... {}: min {:.2f} vs {:.2f}'.format(cnum, curr_odor_xmin, traveled_xmin))\n",
@@ -1817,8 +1817,8 @@
     "print(dfn)\n",
     "df0 = butil.load_dataframe_resampled_csv(fpath)\n",
     "# Get odor params \n",
-    "odor_width =10\n",
-    "odor_params = butil.get_odor_params(df0, odor_width=odor_width)\n",
+    "strip_width =10\n",
+    "odor_params = butil.get_odor_params(df0, strip_width=strip_width)\n",
     "odor_xmin, odor_xmax = odor_params['odor_boundary']\n",
     "odor_start_posx, odor_start_posy = odor_params['odor_start_pos']\n",
     "trial_start_time = odor_params['trial_start_time']\n",
@@ -1933,9 +1933,9 @@
     }
    ],
    "source": [
-    "grid_sep=200\n",
+    "strip_sep=200\n",
     "\n",
-    "ogrid = butil.get_odor_grid(df, odor_width=odor_width, grid_sep=grid_sep,\n",
+    "ogrid = butil.get_odor_grid(df, strip_width=strip_width, strip_sep=strip_sep,\n",
     "                           use_crossings=False, verbose=True)\n",
     "ogrid\n"
    ]
@@ -1984,7 +1984,7 @@
     }
    ],
    "source": [
-    "ogrid2 = butil.get_odor_grid(df, odor_width=odor_width, grid_sep=grid_sep,\n",
+    "ogrid2 = butil.get_odor_grid(df, strip_width=strip_width, strip_sep=strip_sep,\n",
     "                           use_crossings=True, verbose=True)\n",
     "ogrid2"
    ]
@@ -3065,10 +3065,10 @@
    ],
    "source": [
     "# get left and right edge crossings\n",
-    "right_xings = df[(df['ft_posx'] <= (curr_odor_xmax+odor_width*.5)) \\\n",
-    "               & (df['ft_posx'] >= (curr_odor_xmax-odor_width*.5))].loc[ix:].copy()\n",
-    "left_xings = df[(df['ft_posx'] <= (curr_odor_xmin+odor_width*.5)) \\\n",
-    "               & (df['ft_posx'] >= (curr_odor_xmin-odor_width*.5))].loc[ix:].copy()\n",
+    "right_xings = df[(df['ft_posx'] <= (curr_odor_xmax+strip_width*.5)) \\\n",
+    "               & (df['ft_posx'] >= (curr_odor_xmax-strip_width*.5))].loc[ix:].copy()\n",
+    "left_xings = df[(df['ft_posx'] <= (curr_odor_xmin+strip_width*.5)) \\\n",
+    "               & (df['ft_posx'] >= (curr_odor_xmin-strip_width*.5))].loc[ix:].copy()\n",
     "# get in/out bouts\n",
     "right_xings = butil.parse_bouts(right_xings, count_varname='instrip')\n",
     "left_xings = butil.parse_bouts(left_xings, count_varname='instrip')\n",
