--- a/tests/smoothing.ipynb
+++ b/tests/smoothing.ipynb
@@ -199,9 +199,9 @@
     }
    ],
    "source": [
-    "odor_width=50\n",
-    "grid_sep=200\n",
-    "ogrid = butil.get_odor_grid(df0, odor_width=odor_width, grid_sep=grid_sep,\n",
+    "strip_width=50\n",
+    "strip_sep=200\n",
+    "ogrid = butil.get_odor_grid(df0, strip_width=strip_width, strip_sep=strip_sep,\n",
     "                                use_crossings=True, verbose=False)\n",
     "oparams = butil.get_odor_params(df0)\n",
     "oparams"
