--- a/Nbs/ramer-douglas-peucker.ipynb
+++ b/Nbs/ramer-douglas-peucker.ipynb
@@ -183,12 +183,12 @@
    ],
    "source": [
     "# get odor border for each fly\n",
-    "odor_width=50\n",
-    "grid_sep=200\n",
+    "strip_width=50\n",
+    "strip_sep=200\n",
     "odor_borders={}\n",
     "for fly_id, currdf in df0.groupby(['fly_id']):\n",
     "    ogrid = butil.get_odor_grid(currdf, \n",
-    "                                odor_width=odor_width, grid_sep=grid_sep,\n",
+    "                                strip_width=strip_width, strip_sep=strip_sep,\n",
     "                                use_crossings=True, verbose=False)\n",
     "    (odor_xmin, odor_xmax), = ogrid.values()\n",
     "    odor_borders.update({fly_id: (odor_xmin, odor_xmax)})"
@@ -1191,7 +1191,7 @@
     "hue_varname='instrip'\n",
     "palette={True: 'r', False: 'w'}\n",
     "start_at_odor = True\n",
-    "odor_width=50\n",
+    "strip_width=50\n",
     "odor_lc='lightgray'\n",
     "odor_lw=0.5\n",
     "conds=['spontaneoustracking'] #'odor', 'reinforced']\n",
