--- a/Nbs/stripgrid.ipynb
+++ b/Nbs/stripgrid.ipynb
@@ -315,14 +315,14 @@
    ],
    "source": [
     "#odor_cond = 'hdc-sytgcamp7f'\n",
-    "odor_width=10\n",
-    "grid_sep=200\n",
+    "strip_width=10\n",
+    "strip_sep=200\n",
     "# get odor border for each fly\n",
     "odor_borders={}\n",
     "for (fly_id, trial), currdf in df0.groupby(['fly_id', 'trial']):\n",
     "    print(fly_id, trial) #, ogrid)\n",
     "    ogrid = butil.get_odor_grid(currdf, \n",
-    "                                odor_width=odor_width, grid_sep=grid_sep,\n",
+    "                                strip_width=strip_width, strip_sep=strip_sep,\n",
     "                                use_crossings=True, verbose=False)\n",
     "    currkey = '{}_{}'.format(fly_id, trial)\n",
     "    odor_borders[currkey] = list(ogrid.values())"
@@ -405,7 +405,7 @@
     "hue_varname='instrip'\n",
     "palette={True: 'r', False: 'w'}\n",
     "start_at_odor = True\n",
-    "odor_width=10\n",
+    "strip_width=10\n",
     "odor_lc='lightgray'\n",
     "odor_lw=0.5"
    ]
