--- a/anatomicals.ipynb
+++ b/anatomicals.ipynb
@@ -2458,11 +2458,11 @@
    ],
    "source": [
     "#odor_cond = 'hdc-sytgcamp7f'\n",
-    "odor_width=10\n",
-    "grid_sep=200\n",
+    "strip_width=10\n",
+    "strip_sep=200\n",
     "# get odor border for each fly\n",
     "ogrid = butil.get_odor_grid(df0, \n",
-    "                    odor_width=odor_width, grid_sep=grid_sep,\n",
+    "                    strip_width=strip_width, strip_sep=strip_sep,\n",
     "                    use_crossings=True, verbose=False)\n",
     "ogrid\n",
     "odor_bounds = list(ogrid.values())\n",
