move plot_zeroed trajectory to plotting utils

--- a/Nbs/pam-activation_minerva.ipynb
+++ b/Nbs/pam-activation_minerva.ipynb
@@ -22560,7 +22560,7 @@
     "    # PLOT\n",
     "    last_ = df_[df_['instrip']]['boutnum'].max()\n",
     "    plotdf = df_[df_['boutnum']<=last_].copy()\n",
-    "    butil.plot_zeroed_trajectory(plotdf, ax=ax, traj_lw=.75, odor_lw=.5,\n",
+    "    putil.plot_zeroed_trajectory(plotdf, ax=ax, traj_lw=.75, odor_lw=.5,\n",
     "                                 strip_width=50, #params[fn]['strip_width'],\n",
     "                                 strip_sep=1000) #params[fn]['strip_sep'])\n",
     "    # legend\n",
