changed function name, get_bout_metrics for all dfs, and calculate_bout_metrics for 1

--- a/Nbs/EPG_GtACR1.ipynb
+++ b/Nbs/EPG_GtACR1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "488f3d4e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,9 @@
     "import utils as util\n",
     "import behavior as butil\n",
     "import plotting as putil\n",
-    "import google_drive as gdrive"
+    "import google_drive as gdrive\n",
+    "\n",
+    "import re"
    ]
   },
   {
@@ -193,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eb32d493",
+   "id": "dacdc2c8",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b77a6c1f",
+   "id": "c1738bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,13 +241,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7a0165bf",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMPLETE: Data copied\n",
+      "Finding filepaths...\n"
+     ]
+    }
+   ],
    "source": [
+    "# logdf = gdrive.get_info_from_gsheet(experiment)\n",
+    "# logdf.shape\n",
+    "\n",
     "if 'filepath' not in logdf.columns:\n",
     "    print(\"Finding filepaths...\")\n",
     "    logdf['filepath'] = None\n",
@@ -275,8 +289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f0a0ffd8",
+   "execution_count": 14,
+   "id": "e88127c1",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +333,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "cc9da208",
    "metadata": {},
    "outputs": [
@@ -368,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "9a27160c",
    "metadata": {},
    "outputs": [
@@ -378,7 +392,7 @@
        "array(['lights-off'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "588229f1",
    "metadata": {
     "scrolled": false
@@ -2361,7 +2375,7 @@
        "<AxesSubplot: xlabel='ft_posx', ylabel='ft_posy'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2392,17 +2406,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90886ef0",
+   "execution_count": 18,
+   "id": "199290b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'behavior' from '/home/julianarhee/Repositories/plume-tracking/behavior.py'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "importlib.reload(butil)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7352b36d",
    "metadata": {},
    "outputs": [
@@ -2410,7 +2435,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new combined df from raw files...\n",
       "Processing 154 tracking files.\n",
       "Creating combined df\n"
      ]
@@ -2463,6 +2487,14 @@
       "index 0 is out of bounds for axis 0 with size 0\n",
       "Error with logdf: 04182022-115254_UAS-GtACR1_15deg_5mms_downwind\n",
       "index 0 is out of bounds for axis 0 with size 0\n",
+      "Saving combined df to: /home/julianarhee/edgetracking-googledrive/Edge_Tracking/Data/jyr/EPG_GtACR1\n",
+      "Found 6 conditions:\n",
+      "lights-off\n",
+      "lights-on\n",
+      "uas-gtacr1_lights_on\n",
+      "uas_gtacr1_lights_on\n",
+      "uas_gtacr1_lights_off\n",
+      "uas-gtacr1_15deg_5mms_downwind\n",
       "Saving combined df to: /home/julianarhee/edgetracking-googledrive/Edge_Tracking/Data/jyr/EPG_GtACR1\n"
      ]
     }
@@ -2497,10 +2529,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "150e5a3a",
+   "execution_count": 23,
+   "id": "07cb8e22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['04122022-121823_UAS-GtACR1_lights_on',\n",
+       " '04122022-122456_UAS-GtACR1_lights_on',\n",
+       " '04122022-122846_UAS-GtACR1_lights_on',\n",
+       " '04122022-123223_UAS-GTACR1_lights_on',\n",
+       " '04122022-123840_UAS-GTACR1_lights_on',\n",
+       " '04142022-155728_UAS_GtACR1_lights_on',\n",
+       " '04142022-160731_UAS_GtACR1_lights_off',\n",
+       " '04182022-115254_UAS-GtACR1_15deg_5mms_downwind']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors"
    ]
@@ -2508,7 +2558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7672556d",
+   "id": "8b906d83",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2516,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b8ff978",
+   "id": "d070a449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2530,7 +2580,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "b016698d",
+   "id": "bd2fff69",
    "metadata": {},
    "outputs": [
     {
@@ -2563,7 +2613,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "99137018",
+   "id": "c5eb95ed",
    "metadata": {},
    "outputs": [
     {
@@ -2635,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd35cd1d",
+   "id": "86fa7201",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2643,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f52e433",
+   "id": "395965b4",
    "metadata": {},
    "outputs": [],
    "source": []
