--- a/Nbs/average-bout-hdc.ipynb
+++ b/Nbs/average-bout-hdc.ipynb
@@ -623,7 +623,7 @@
     "group_vars=['fly_id', 'condition' , 'boutnum', 'trial_id']\n",
     "\n",
     "metrics = df_fp.groupby(['trial_id', 'boutnum'])\\\n",
-    "            .apply(butil.get_bout_metrics, group_vars=group_vars,\n",
+    "            .apply(butil.calculate_bout_metrics, group_vars=group_vars,\n",
     "                   heading_vars=heading_vars).reset_index()\n",
     "metrics"
    ]
