--- a/Nbs/average-bout.ipynb
+++ b/Nbs/average-bout.ipynb
@@ -2461,7 +2461,7 @@
     "heading_vars = [c for c in df_fp.columns if 'phase' in c or 'heading' in c]\n",
     "group_vars=['fly_id', 'condition' , 'boutnum', 'trial_id']\n",
     "metrics = df.groupby(['trial_id', 'boutnum'])\\\n",
-    "            .apply(butil.get_bout_metrics, group_vars=group_vars,\n",
+    "            .apply(butil.calculate_bout_metrics, group_vars=group_vars,\n",
     "                   heading_vars=heading_vars).unstack().reset_index()"
    ]
   },
