--- a/Nbs/pam-activation_minerva.ipynb
+++ b/Nbs/pam-activation_minerva.ipynb
@@ -22602,7 +22602,7 @@
    "outputs": [],
    "source": [
     "boutdf = pd.concat([df_.groupby(['boutnum', 'condition'], group_keys=True)\\\n",
-    "                 .apply(butil.get_bout_metrics).unstack().reset_index() \\\n",
+    "                 .apply(butil.calculate_bout_metrics).unstack().reset_index() \\\n",
     "                 for fn, df_ in etdf.groupby(['filename'])]).reset_index()\n",
     "boutdf['instrip'] = boutdf['instrip'].astype(bool)\n",
     "\n",
