--- a/Nbs/tortuosity-metrics.ipynb
+++ b/Nbs/tortuosity-metrics.ipynb
@@ -9032,7 +9032,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boutdf = butil.get_bout_metrics(df0)"
+    "boutdf = butil.calculate_bout_metrics(df0)"
    ]
   },
   {
@@ -9042,7 +9042,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boutdf = df0.groupby('boutnum').apply(butil.get_bout_metrics).unstack().reset_index()"
+    "boutdf = df0.groupby('boutnum').apply(butil.calculate_bout_metrics).unstack().reset_index()"
    ]
   },
   {
