--- a/Nbs/tortuosity-metrics.ipynb
+++ b/Nbs/tortuosity-metrics.ipynb
@@ -1193,7 +1193,7 @@
     "# for pos in ['right', 'top', 'bottom', 'left']:\n",
     "#    pl.gca().spines[pos].set_visible(False)\n",
     "leg_xpos=0; leg_ypos=round(df0.loc[odor_ix]['ft_posy']); leg_scale=100\n",
-    "butil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos)\n",
+    "putil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos)\n",
     "# ax.plot([leg_xpos, leg_xpos], [leg_ypos, leg_ypos+leg_scale], 'w', lw=2)\n",
     "# ax.text(leg_xpos-250, leg_ypos+(leg_scale/2), '{} mm'.format(leg_scale), fontsize=12)\n",
     "#ax.axis('off')\n",
@@ -2405,7 +2405,7 @@
     "    ax.plot(b_['ft_posx'], b_['ft_posy'], lw=1, c='r')\n",
     "# legend    \n",
     "leg_xpos=round(df.iloc[0]['ft_posx'])-50; leg_ypos=round(df.iloc[0]['ft_posy']); leg_scale=100\n",
-    "butil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
+    "putil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
     "ax.axis('off')\n",
     "pl.subplots_adjust(left=0.2)\n",
     "util.label_figure(fig, curr_figid)\n",
@@ -4567,7 +4567,7 @@
     "    ax.plot(b_['ft_posx'], b_['ft_posy'], lw=1, c='r')\n",
     "# legend    \n",
     "leg_xpos=200; leg_ypos=round(df.iloc[0]['ft_posy']); leg_scale=100\n",
-    "butil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
+    "putil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
     "util.label_figure(fig, curr_figid)\n"
    ]
   },
@@ -6713,7 +6713,7 @@
     "# legend    \n",
     "leg_xpos=round(bdf.iloc[0]['ft_posx'])-15; \n",
     "leg_ypos=round(bdf.iloc[0]['ft_posy']); leg_scale=50\n",
-    "butil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
+    "putil.vertical_scalebar(ax, leg_xpos=leg_xpos, leg_ypos=leg_ypos, leg_scale=leg_scale)\n",
     "ax.axis('off')\n",
     "\n",
     "pl.subplots_adjust(left=0.2)\n",
