move tortuosity metrics to behavior. adjust bout filtering func to allow filter by y_thresh

--- a/Nbs/tortuosity-group.ipynb
+++ b/Nbs/tortuosity-group.ipynb
@@ -304,7 +304,7 @@
     "    obounds = list(obounds_fp.values())\n",
     "    params[fkey]['odor_bounds'] = obounds\n",
     "    # calculate tortuosity metrics\n",
-    "    tortdf = traj.calculate_tortuosity_metrics(df, xdist_cutoff=1.9)\n",
+    "    tortdf = butil.calculate_tortuosity_metrics(df, xdist_cutoff=1.9)\n",
     "    tortdf['filename'] = fn\n",
     "    \n",
     "    if plot:\n",
