find diff tap levels, plot and align to taps

--- a/Nbs-courtship/load-neural-data.ipynb
+++ b/Nbs-courtship/load-neural-data.ipynb
@@ -31,6 +31,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "cea5e425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyometiff\n",
+      "  Downloading pyometiff-0.0.13-py3-none-any.whl (36 kB)\n",
+      "Requirement already satisfied: imagecodecs in /Users/julianarhee/miniforge3/envs/plume/lib/python3.9/site-packages (from pyometiff) (2022.8.8)\n",
+      "Requirement already satisfied: numpy in /Users/julianarhee/miniforge3/envs/plume/lib/python3.9/site-packages (from pyometiff) (1.23.3)\n",
+      "Requirement already satisfied: tifffile>2020.10.1 in /Users/julianarhee/miniforge3/envs/plume/lib/python3.9/site-packages (from pyometiff) (2022.10.10)\n",
+      "Requirement already satisfied: lxml in /Users/julianarhee/miniforge3/envs/plume/lib/python3.9/site-packages (from pyometiff) (4.9.1)\n",
+      "Installing collected packages: pyometiff\n",
+      "Successfully installed pyometiff-0.0.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!pip install --prefix {sys.prefix} pyometiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "33256709",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyometiff\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OMETIFFWriter\n\u001b[0;32m----> 3\u001b[0m img_array, metadata, xml_metadata \u001b[38;5;241m=\u001b[39m \u001b[48;5;9mreader\u001b[49m\u001b[38;5;241m.\u001b[39mread()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reader' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from pyometiff import OMETIFFWriter\n",
+    "\n",
+    "reader = OMETIFFReader(fpath=img_fpath)\n",
+    "img_array, metadata, xml_metadata = reader.read()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "d7bd5128",
    "metadata": {},
